test/files/neg/t4091.check
t4091.scala:1: error: expected start of definition
private a
        ^
one error found
